<resources>
    <string name="app_name">College Scheduler App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_tasks">Tasks</string>
    <string name="menu_assessments">Assessments</string>
    <string name="menu_classes">Classes</string>
    <string name="menu_assignments">Assignments</string>
    <string name="menu_newtab">Add New</string>


    <string name="assignments_fragment_text">This is the assignments fragment.</string>
    <string name="classes_fragment_text">Classes</string>
    <string name="new_activity_text">This is the new activity.</string>
    <string name="assessments_fragment_text">This is the assessments fragment.</string>
    <string name="tasks_fragment_text">Tasks</string>
    <string name="home_welcome_message">Welcome to the College Scheduler App</string>
    <string name="home_assessment_button">Add new assessment</string>
    <string name="home_assignment_button">Add new assignment</string>
    <string name="home_class_button">Add new class</string>
    <string name="home_task_button">Add new task</string>
    <string name="add_class_button">Add Class</string>
    <string name="add_new_class">Add New Class</string>
    <string name="add_class_name">Class name</string>
    <string name="edit_class_name">Class name</string>
    <string name="class_add_prompt">Enter: \"Name, Professor, Time\"</string>
    <string name="class_home_button_text">Return to Home Page</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addClass_header_text">Class Info</string>
    <string name="class_name_text">Class name</string>
    <string name="class_prof_text">Professor</string>
    <string name="class_time_text">Time</string>
    <string name="class_save_button_text">Save class information</string>
    <string name="cancel">Cancel</string>
    <string name="assessments_fragment_title">Assessments</string>
    <string name="add_assessment_button">Add Assessment</string>
    <string name="assessment_name_text">Assessment name</string>
    <string name="course">Course</string>
    <string name="date">Date: MM/DD/YY</string>
    <string name="save_assessment_information">Save assessment information</string>
    <string name="time">Time</string>
    <string name="college_scheduler_app">College Scheduler App</string>
    <string name="classes">Classes</string>
    <string name="class_id">Class ID</string>
    <string name="taskName">Name</string>
    <string name="enter_task_hint">Name</string>
    <string name="taskButtonText">Add</string>
    <string name="view_tasks">View Tasks</string>
    <string name="saveTask">Save</string>
    <string name="title">Title:</string>
    <string name="delete">Delete</string>

</resources>