<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- Tutorial to make icons: https://developer.android.com/studio/write/create-app-icons -->

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_assessments"
            android:icon="@drawable/assessments_icon"
            android:title="@string/menu_assessments" />
        <item
            android:id="@+id/nav_tasks_list"
            android:icon="@drawable/tasks_icon"
            android:title="@string/menu_tasks" />

        <item
            android:id="@+id/nav_classes"
            android:icon="@drawable/class_icon2"
            android:title="@string/menu_classes" />

        <item
            android:id="@+id/nav_assignments"
            android:icon="@drawable/class_icon"
            android:title="@string/menu_assignments" />

    </group>
</menu>