<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.AddClassFragment">

    <EditText
        android:id="@+id/class_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:hint="@string/class_name_text"
        android:inputType="text" />

    <EditText
        android:id="@+id/class_prof"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:hint="@string/class_prof_text"
        android:inputType="text" />

    <EditText
        android:id="@+id/class_time"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:hint="@string/class_time_text"
        android:inputType="text" />


    <Button
        android:id="@+id/class_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_save_button_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/class_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />



</LinearLayout>