<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.assessments.AddAssessmentFragment">

    <EditText
        android:id="@+id/assessment_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:hint="@string/assessment_name_text"
        android:inputType="text" />

    <EditText
        android:id="@+id/assessment_course"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:hint="@string/course"
        android:inputType="text" />

    <EditText
        android:id="@+id/assessment_date"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:hint="@string/date"
        android:inputType="text" />

    <EditText
        android:id="@+id/assessment_time"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:hint="@string/time"
        android:inputType="text" />

    <EditText
        android:id="@+id/assessment_location"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:hint="Location"
        android:inputType="text" />


    <Button
        android:id="@+id/assessment_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_assessment_information"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/assessment_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />



</LinearLayout>