<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.collegeschedulerapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_assessments"
            app:destination="@id/nav_assessments" />
    </fragment>

    <fragment
        android:id="@+id/nav_assessments"
        android:name="com.example.collegeschedulerapp.ui.assessments.AssessmentsFragment"
        android:label="@string/menu_assessments"
        tools:layout="@layout/fragment_assessments" >

        <action
            android:id="@+id/action_Assessments_to_AddAssessment"
            app:destination="@id/nav_add_assessment" />
        <argument
            android:name="assessment"
            app:argType="com.example.collegeschedulerapp.ui.assessments.Assessment"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="pos"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>

    <activity
        android:id="@+id/nav_tasks"
        android:name="com.example.collegeschedulerapp.TaskActivity"
        android:label="@string/menu_tasks"
        tools:layout="@layout/activity_task" />

    <activity
        android:id="@+id/nav_classes"
        android:name="com.example.collegeschedulerapp.ClassesActivity"
        android:label="@string/menu_classes"
        tools:layout="@layout/activity_classes" />

    <fragment
        android:id="@+id/nav_assignments"
        android:name="com.example.collegeschedulerapp.ui.assignments.AssignmentsFragment"
        android:label="@string/menu_assignments"
        tools:layout="@layout/fragment_assignments" />

    <activity
        android:id="@+id/nav_newtab"
        android:name="com.example.collegeschedulerapp.ui.newtab.NewTabActivity"
        android:label="@string/menu_newtab"
        tools:layout="@layout/activity_newtab" />

    <fragment
        android:id="@+id/nav_add_assessment"
        android:name="com.example.collegeschedulerapp.ui.assessments.AddAssessmentFragment"
        tools:layout="@layout/fragment_add_assessment" >

        <action
            android:id="@+id/action_AddAssessment_to_Assessments"
            app:destination="@id/nav_assessments" />
        <argument
            android:name="position"
            app:argType="integer"
            android:defaultValue="0" />

    </fragment>

</navigation>