<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ClassesActivity">

    <TextView
        android:id="@+id/class_title"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/classes_fragment_text"
        android:textSize="40sp" />


    <FrameLayout
        android:id="@+id/frame_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="223dp" >

        <Button
            android:id="@+id/button_addClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_class_button"
            android:onClick="this"
            tools:ignore="onClick" />

    </FrameLayout>

    <Button
        android:id="@+id/class_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_home_button_text"
        android:layout_gravity="center_horizontal" />

    <ListView
        android:id="@+id/classList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent" />




</LinearLayout>