<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="ui.assignments.AddAssignmentFragment" >

    <EditText
        android:id="@+id/assignment_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:hint="Assignment Title"
        android:inputType="text" />

    <EditText
        android:id="@+id/assignment_course"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:hint="@string/course"
        android:inputType="text" />

    <EditText
        android:id="@+id/assignment_date"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:hint="@string/date"
        android:inputType="text" />


    <Button
        android:id="@+id/assignment_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save Assignment Information"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_background"/>

    <Button
        android:id="@+id/assignment_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_background"/>



</LinearLayout>